# flask-psql-service

./: README.md  config.py  pyproject.toml  run.py
docker/: Dockerfile  docker-compose.yml
flask_psql_service/: __init__.py  models.py
migrations/versions/: 3357dc9422fa_.py  74e292aa4413_.py  c159eb50a274_.py  dbacd011a163_.py
tests/: test_flask_psql_service.py
